--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
     "ws": "^8.18.0"
