--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "jsdom": "^26.0.0",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
     "ws": "^8.18.0"
