--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build":  "node index.js"
+    "start": "npm install && node index.js",
+    "build":  "npm install && node index.js"
   },
   "keywords": [],
   "author": "",
