--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && node index.js",
-    "build":  "npm install && node index.js"
+    "start": "node index.js",
+    "build":  "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +16,8 @@
     "bcrypt": "^5.1.1",
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
-    "fs": "^0.0.1-security",
-    "https": "^1.0.0",
     "jsdom": "^26.0.0",
     "mongoose": "^8.10.0",
-    "nodemon": "^3.1.9",
     "ws": "^8.18.0"
   }
 }
