--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build":  "node index.js"
+    "start": "nodemon index.js",
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,12 @@
     "bcrypt": "^5.1.1",
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
+    "firebase": "^11.7.1",
     "jsdom": "^26.0.0",
     "mongoose": "^8.10.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
